--- a/Jquery_CRUD_MVC/Views/Home/Index.cshtml
+++ b/Jquery_CRUD_MVC/Views/Home/Index.cshtml
@@ -1,7 +1,64 @@
-﻿
+﻿@model Jquery_CRUD_MVC.Models.EmployeeViewModel
 @{
     ViewBag.Title = "Index";
+
 }
 
 <h2>Index</h2>
 
+
+@{/*  Reference */ }
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+<script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+<link rel="stylesheet" href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" />
+
+@{/* Reference */ }
+<div class="container" style="margin-top:3%">
+    <table id="myDatatable" class="table table-hover">
+        <thead>
+            <tr>
+                <th>#Uid</th>
+                <th>Mobile No</th>
+                <th>Name</th>
+                <th>Designation</th>
+                <th>Edit</th>
+                <th>Disable</th>
+
+            </tr>
+        </thead>
+    </table>
+
+</div>
+
+<script>
+    $(document).ready(function () {
+        var oTable = $('#myDatatable').DataTable({
+            "ajax": {
+                "url": '/Ajax/GetRecords',
+                "type": "get",
+                "datatype": "json"
+            },
+            "columns":
+                [
+                    { "data": "Uid", "autoWidth": true },
+                    { "data": "mobileNo", "autoWidth": true },
+                    { "data": "Name", "autoWidth": true },
+                    { "data": "Designation", "autoWidth": true },
+
+                    {
+                        "data": "Uid", "width": "50px", "render": function (data) {
+                            return '<a class="popup" style="padding:15px;" href="/home/Edit/' + data + '">&nbsp;<span style="font-size:15px;">&#9998;</span></a>';
+                        }
+                    }
+                    ,
+                    {
+                        "data": "Uid", "width": "50px", "render": function (data) {
+                            return '<a class="popup" style="padding:15px;" href="/home/Deactive/' + data + '"> <span style="font-size:15px;">&#10008;</span></a>';
+                        }
+                    }
+                ]
+        })
+    })
+</script>
