--- a/Jquery_CRUD_MVC/Views/Home/Index.cshtml
+++ b/Jquery_CRUD_MVC/Views/Home/Index.cshtml
@@ -4,8 +4,73 @@
 
 }
 
-<h2>Index</h2>
+<h2>All Data From DataBase</h2>
+<style>
+* {
+  box-sizing: border-box;
+}
 
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+    .container-two {
+        border-radius: 5px;
+         
+        padding: 20px;
+        opacity: 0.99;
+    }
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+</style>
 
 @{/*  Reference */ }
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
@@ -15,50 +80,165 @@
 <link rel="stylesheet" href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" />
 
 @{/* Reference */ }
+ 
+<div class="container">
+    <button class="btn btn-info" id="myBtn" value="Add New">Add New</button>
+    <br />
+
+    <div id="myModal" class="modal">
+        <div class="modal-content" style="margin-top:11%;margin-left:25%;margin-right:25%;height:auto;  opacity: 0.999 ;">
+            <a id="span"><span class="close">&times;</span>  </a>
+
+            <div class="container-two">
+                
+                    <div class="row">
+                        <h3 style="background-color:purple;color:#ffffff;padding:20px;">Please Enter Details</h3>
+                    </div> 
+                
+                
+                <div class="row">
+                        <div class="col-25">
+                            <label for="name">Name</label>
+                        </div>
+                        <div class="col-75">
+                            <input type="text" id="name" name="name" placeholder="Your name..">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="mobile">Mobile</label>
+                        </div>
+                        <div class="col-75">
+                            <input type="text" id="mobile" name="mobile" placeholder="Your Mobile No">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-25">
+                            <label for="country">Country</label>
+                        </div>
+                        @*<div class="col-75">
+                            <select id="country" name="country">
+                                <option value="australia">Australia</option>
+                                <option value="canada">Canada</option>
+                                <option value="usa">USA</option>
+                            </select>
+                        </div>*@
+                    </div>
+                   
+                    <div class="row">
+                        <input type="submit" value="Add To Main"  id="AddNewCall" >
+                    </div>
+              
+            </div>
+        </div>
+
+    </div>
+</div>
+ 
+<script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // Get the button that SAvedata the modal
+    var btnAddNew = document.getElementById("AddNewCall");
+    btnAddNew.onclick = function () {
+
+        var name = $('#name').val();
+        var mobile = $('#mobile').val();
+       alert(mobile);
+
+
+        $.ajax({
+            url: "ajax/addDataToMain",
+            type: "POST",
+            data: { name: name, mobile: mobile },
+            success: function (data)
+            {
+                updatetable();
+            }
+
+         
+        })
+
+
+
+
+    }
+
+
+
+    btn.onclick = function ()
+    {
+        modal.style.display = "block";
+    }
+    span.onclick = function ()
+    {
+        modal.style.display = "none";
+    }
+
+</script>
+
+
 <div class="container" style="margin-top:3%">
-    <table id="myDatatable" class="table table-hover">
-        <thead>
+
+
+    <table id="ShowDetail" class="table table-hover">
+        <thead style="background-color:red;color:#ffffff;">
             <tr>
                 <th>#Uid</th>
                 <th>Mobile No</th>
                 <th>Name</th>
-                <th>Designation</th>
                 <th>Edit</th>
                 <th>Disable</th>
 
             </tr>
         </thead>
+        <tbody id="ShowDetailbody"></tbody>
     </table>
 
 </div>
 
-<script>
-    $(document).ready(function () {
-        var oTable = $('#myDatatable').DataTable({
-            "ajax": {
-                "url": '/Ajax/GetRecords',
-                "type": "get",
-                "datatype": "json"
-            },
-            "columns":
-                [
-                    { "data": "Uid", "autoWidth": true },
-                    { "data": "mobileNo", "autoWidth": true },
-                    { "data": "Name", "autoWidth": true },
-                    { "data": "Designation", "autoWidth": true },
+<script> 
 
-                    {
-                        "data": "Uid", "width": "50px", "render": function (data) {
-                            return '<a class="popup" style="padding:15px;" href="/home/Edit/' + data + '">&nbsp;<span style="font-size:15px;">&#9998;</span></a>';
-                        }
-                    }
-                    ,
-                    {
-                        "data": "Uid", "width": "50px", "render": function (data) {
-                            return '<a class="popup" style="padding:15px;" href="/home/Deactive/' + data + '"> <span style="font-size:15px;">&#10008;</span></a>';
-                        }
-                    }
-                ]
-        })
+
+    $(document).ready(function ()
+    {
+        updatetable();
     })
+
+
+
+    function updatetable() {
+        var txt = "";
+        $("#ShowDetailbody").html(txt);
+        $.ajax({
+            url: '/Ajax/GetRecords',
+            type: "GET",
+            dataType: "JSON",
+            //data: { userName: userAlias.value }, //Use the value property here
+            success: function (data) {
+
+                console.log(data);
+
+                data = JSON.parse(data);
+                console.log(data);
+
+                $.each(data, function (i, databind) {
+                    txt += "<tr><td>" + databind.Uid + "</td>";
+                    txt += "<td>" + databind.mobileNo + "</td>";
+                    txt += "<td>" + databind.Name + "</td>";
+                    txt += "<td><a href=" + databind.Uid + ">Update</a></td>";
+                    txt += "<td><a href=" + databind.Uid + ">Disable</a></td></tr>";
+                });
+
+                $("#ShowDetailbody").html(txt); //Move code to set text here
+            }
+        });
+
+
+    }
 </script>
